--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,14 +32,17 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
+                         <a class="btn zoombtn" href="{{ site.url }}/about-me">
+                         About Me
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         <a class="btn zoombtn" href="{{ site.url }}/all-courses">
+                         All Courses
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                         <a class="btn zoombtn" href="{{ site.url }}/research">
+                         Research
+                         </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/cv">
+                         CV
                          </a>
                  </h3>
             </div>
