--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 //colors
-$bodycolor           : #0033a0;
+$bodycolor           : #00143e;
 $black           	 : #000;
 $white               : #fff;
 $color_gray          : #e8e8e8;
