--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,13 +35,16 @@ layout: compress
                          About Me
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/all-courses">
-                         All Courses
+                         Courses I'm Teaching
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/research">
                          Research
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/cv">
                          CV
+                         </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/contact">
+                         Contact
                          </a>
                  </h3>
             </div>
