--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,10 +32,10 @@ layout: compress
                   <hr class="hr-line">
                   <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about-me">
-                         About Me
+                         About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/all-courses">
-                         Courses I'm Teaching
+                         Courses
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/research">
                          Research
