--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,6 +2,6 @@
     <script src="{{ site.url }}/assets/js/jquery-1.12.0.min.js"></script>
     <script src="{{ site.url }}/assets/js/jquery.dlmenu.min.js"></script>
     <script src="{{ site.url }}/assets/js/jquery.goup.min.js"></script>
-    <script src="{{ site.url }}/assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="{{ site.url }}/assets/js/jquery.fitvid.min.js"></script>
-    <script src="{{ site.url }}/assets/js/scripts.js"></script>
+    <!--script src="{{ site.url }}/assets/js/jquery.magnific-popup.min.js"></script-->
+    <!--script src="{{ site.url }}/assets/js/jquery.fitvid.min.js"></script-->
+    <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
