--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ layout: compress
 <body>
     {% include nav.html %}
     <!-- Header -->
-    <header class="header" role="banner">
+    <header class="header flex" role="banner">
         <div class="wrapper animated fadeIn">
             <div class="content">
                 <div class="post-title {% if page.feature %} feature {% endif %}">
