--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -72,6 +72,7 @@ body {
 .container {
 	width: 36rem;
 	max-width: 550px;
+	margin: 4rem auto;
 	padding-right: 15px;
 	padding-left: 15px;
 	@include center-block();
@@ -114,65 +115,6 @@ body {
 		width: 100%;//90%
 		padding: 2em 0;
 	  //box-shadow: none;
-	}
-}
-#disqus_thread {
-	width: 75%;
-	max-width: 850px;
-	margin: -3rem auto 4rem;
-	background: $white;
-	color: $color_tuatara;
-	padding: 2em;
-	border-radius: 3px;
-	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
-	@include transition(.5s);
-	@media #{$small} {
-		width: 90%;
-		padding: 2em 0;
-	    box-shadow: none;
-	}
-}
-// entry meta
-.entry-meta {
-	@include font-rem(12);
-	text-transform: uppercase;
-	color: lighten($color_tuatara,60);
-	padding-left: 0;
-	a {
-		color: lighten($color_tuatara,60);
-	}
-	li {
-	    list-style-type: none;
-	    display: inline;
-	}
-	.tag {
-	    display: inline-block;
-        border: 1px solid;
-        border-color: rgba($color_mercury,0.5) rgba($color_bon_jour,0.5) $color_mischka;
-        @include rounded(3px);
-        text-decoration: none;
-        background-color: $white;
-        color: $color_tuatara;
-        @include transition(.75s);
-        margin: 2px 5px;
-		span {
-			float: left;
-			padding: 2px 6px;
-		}
-		.count {
-			background-color: darken($white,15);
-			@include border-radius(3px,3px,0,0);
-		}
-		&:hover {
-			background-color: darken($white,15);
-			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
-		}
-	}
-}
-header .entry-meta {
-	display: none; // hide header meta on small screens
-	@media #{$notsmall} {
-		display: block;
 	}
 }
 .entry-title a {
