--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,6 +40,9 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/research">
                          Research
                          </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         Projects
+                         </a>
                          <a class="btn zoombtn" href="{{ site.url }}/cv">
                          CV
                          </a>
