--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,10 @@ layout: compress
                 <div class="post-title {% if page.feature %} feature {% endif %}">
                     <h1>{{ page.title }}</h1>
                     <h4>{{ page.date | date_to_string }}</h4>
-                    {% if page.project %}
+                    {% if page.course %}
                     <a class="btn zoombtn" href="{{site.url}}/all-courses/">
+                    {% else if page.project %}
+                    <a class="btn zoombtn" href="{{site.url}}/projects/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
