--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: compress
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
-                        <i class="fa fa-chevron-left"></i>
+                        <i class="fa fa-chevron-up"></i>
                     </a>
                 </div>
                 {{ content }}
